fix: GNB alignment

--- a/src/components/layouts/GNB/gnb.module.scss
+++ b/src/components/layouts/GNB/gnb.module.scss
@@ -28,12 +28,18 @@
     align-items: center;
     justify-content: center;
 
-    .username {
-      margin-left: 20px;
-      font-size: 16px;
+    .user {
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
-      &:hover {
-        text-decoration: underline;
+      .username {
+        margin-left: 20px;
+        font-size: 16px;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
 
